--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Unit tests
+name: Run tests
 on:
   push:
     branches:
@@ -10,7 +10,7 @@ concurrency:
   group: ci-unit-${{ github.head_ref || github.ref }}-${{ github.repository }}
   cancel-in-progress: true
 jobs:
-  unit-tests:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
