Show results page and skip invalid questions
Signed-off-by: Dimitris Karakasilis <dimitris@karakasilis.me>

--- a/tests/assets/question_pool.yaml
+++ b/tests/assets/question_pool.yaml
@@ -2,7 +2,7 @@ questions:
   - text: Question with difficulty 1
     difficulty: 1
     type: single-choice
-    right-answer: 3
+    rightAnswer: 3
     answers:
     - answer 1
     - answer 2
@@ -12,7 +12,7 @@ questions:
   - text: Question 2 with difficulty 1
     difficulty: 1
     type: single-choice
-    right-answer: 3
+    rightAnswer: 3
     answers:
     - answer 1
     - answer 2
@@ -22,7 +22,7 @@ questions:
   - text: Question with difficulty 2
     difficulty: 2
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -32,7 +32,7 @@ questions:
   - text: Question 2 with difficulty 2
     difficulty: 2
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -42,7 +42,7 @@ questions:
   - text: Question with difficulty 3
     difficulty: 3
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -52,7 +52,7 @@ questions:
   - text: Question 2 with difficulty 3
     difficulty: 3
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -62,7 +62,7 @@ questions:
   - text: Question with difficulty 4
     difficulty: 4
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -72,7 +72,7 @@ questions:
   - text: Question 2 with difficulty 4
     difficulty: 4
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -82,7 +82,7 @@ questions:
   - text: Question with difficulty 5
     difficulty: 5
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -92,7 +92,7 @@ questions:
   - text: Question 2 with difficulty 5
     difficulty: 5
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -102,7 +102,7 @@ questions:
   - text: Question with difficulty 6
     difficulty: 6
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -112,7 +112,7 @@ questions:
   - text: Question 2 with difficulty 6
     difficulty: 6
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -122,7 +122,7 @@ questions:
   - text: Question with difficulty 7
     difficulty: 7
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -132,7 +132,7 @@ questions:
   - text: Question 2 with difficulty 7
     difficulty: 7
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -142,7 +142,7 @@ questions:
   - text: Question with difficulty 8
     difficulty: 8
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -152,7 +152,7 @@ questions:
   - text: Question 2 with difficulty 8
     difficulty: 8
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -162,7 +162,7 @@ questions:
   - text: Question with difficulty 9
     difficulty: 9
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -172,7 +172,7 @@ questions:
   - text: Question 2 with difficulty 9
     difficulty: 9
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -182,7 +182,7 @@ questions:
   - text: Question with difficulty 10
     difficulty: 10
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
@@ -192,7 +192,7 @@ questions:
   - text: Question 2 with difficulty 10
     difficulty: 10
     type: single-choice
-    right-answer: 1
+    rightAnswer: 1
     answers:
     - answer 1
     - answer 2
